--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -19,7 +19,16 @@ engines:
 ratings:
   paths:
   - "**.css"
+  - "**.inc"
+  - "**.js"
+  - "**.jsx"
+  - "**.module"
   - "**.php"
+  - "**.py"
+  - "**.rb"
 exclude_paths:
-    - "system/**/*"
-    - "user_guide/**/*"
+  - "**.inc"
+  - "**.jsx"
+  - "**.module"
+  - "**.py"
+  - "**.rb"
