Let's try a different approach
Forget excluding paths. Changed the ratings path to application.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -18,14 +18,5 @@ engines:
     enabled: true
 ratings:
   paths:
-  - "**.css"
-  - "**.inc"
-  - "**.js"
-  - "**.jsx"
-  - "**.module"
-  - "**.php"
-  - "**.py"
-  - "**.rb"
+  - "application"
 exclude_paths:
-    - "**/system/**"
-    - "**/user_guide/**"
