--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -27,5 +27,5 @@ ratings:
   - "**.py"
   - "**.rb"
 exclude_paths:
-    - "system/core/Input.php"
-    - "user_guide/"
+    - "system/**/*"
+    - "user_guide/**/*"
